--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,58 +9,12 @@ jobs:
     executor: base
     steps:
       - checkout
-      - run: go get -d ./...
-      - run: go get github.com/inconshreveable/mousetrap # for windows CLI builds
+      - run: make deps_go
       - run: sudo chown -R circleci /go/src
       - save_cache:
           key: v1-go-src-{{ .Branch }}-{{ .Revision }}
           paths:
             - /go/src
-  test:
-    executor: base
-    steps:
-      - run: sudo chown -R circleci /go/src
-      - restore_cache:
-          keys:
-            - v1-go-src-{{ .Branch }}-{{ .Revision }}
-      - run:
-          name: Get shadow
-          command: go get golang.org/x/tools/go/analysis/passes/shadow/cmd/shadow
-      - run:
-          name: Install shadow
-          command: go install golang.org/x/tools/go/analysis/passes/shadow/cmd/shadow
-      - run:
-          name: Download and install errcheck
-          command: go get -u github.com/kisielk/errcheck
-      - run:
-          name: Download and install misspell
-          command: go get -u github.com/client9/misspell/cmd/misspell
-      - run:
-          name: Download and install ineffassign
-          command: go get -u github.com/gordonklaus/ineffassign
-      - run:
-          name: Download and install staticheck
-          command: go get -u honnef.co/go/tools/cmd/staticcheck
-      - run: make test
-  validate:
-    executor: base
-    steps:
-      - run: sudo chown -R circleci /go/src
-      - restore_cache:
-          keys:
-            - v1-go-src-{{ .Branch }}-{{ .Revision }}
-      - run:
-          name: Install Dig
-          command: sudo apt update && sudo apt install dnsutils
-      - run:
-          name: "Update ~/.ssh/known_hosts"
-          command: |
-            mkdir ~/.ssh/
-            touch ~/.ssh/known_hosts
-            for ip in $(dig @8.8.8.8 github.com +short); do ssh-keyscan github.com,$ip; ssh-keyscan $ip; done 2>/dev/null >> ~/.ssh/known_hosts
-      - run: go get github.com/spatialcurrent/go-header/...
-      - run: go install github.com/spatialcurrent/go-header/cmd/goheader
-      - run: goheader fix --fix-year 2019 --exit-code-on-changes 1 --verbose
   build_cli:
     executor: base
     steps:
@@ -68,9 +22,22 @@ jobs:
       - restore_cache:
           keys:
             - v1-go-src-{{ .Branch }}-{{ .Revision }}
-      - run: make build
+      - run: go get github.com/inconshreveable/mousetrap # for windows CLI builds
+      - run: make build_cli
       - store_artifacts:
           path: bin
+          destination: /
+  build_javascript:
+    executor: base
+    steps:
+      - run: sudo chown -R circleci /go/src
+      - restore_cache:
+          keys:
+            - v1-go-src-{{ .Branch }}-{{ .Revision }}
+      - run: make deps_gopherjs
+      - run: make build_javascript
+      - store_artifacts:
+          path: dist
           destination: /
 workflows:
   main:
@@ -79,9 +46,9 @@ workflows:
       - test:
           requires:
             - pre_deps_golang
-      - validate:
+      - build_cli:
           requires:
             - pre_deps_golang
-      - build_cli:
+      - build_javascript:
           requires:
             - pre_deps_golang
