--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,27 @@ jobs:
           key: v1-go-src-{{ .Branch }}-{{ .Revision }}
           paths:
             - /go/src
+  test_go:
+    executor: base
+    steps:
+      - run: sudo chown -R circleci /go/src
+      - restore_cache:
+          keys:
+            - v1-go-src-{{ .Branch }}-{{ .Revision }}
+      - run: make deps_go_test
+      - run: make test_go
+      - run: make imports
+      - run: git diff --exit-code
+  test_javascript:
+    executor: base
+    steps:
+      - run: sudo chown -R circleci /go/src
+      - restore_cache:
+          keys:
+            - v1-go-src-{{ .Branch }}-{{ .Revision }}
+      - run: make deps_gopherjs
+      - run: make deps_javascript
+      - run: npm run test:clean
   build_cli:
     executor: base
     steps:
@@ -39,11 +60,26 @@ jobs:
       - store_artifacts:
           path: dist
           destination: /
+  build_so:
+    executor: base
+    steps:
+      - run: sudo chown -R circleci /go/src
+      - restore_cache:
+          keys:
+            - v1-go-src-{{ .Branch }}-{{ .Revision }}
+      - run: sudo make deps_arm
+      - run: make build_so
+      - store_artifacts:
+          path: bin
+          destination: /
 workflows:
   main:
     jobs:
       - pre_deps_golang
-      - test:
+      - test_go:
+          requires:
+            - pre_deps_golang
+      - test_javascript:
           requires:
             - pre_deps_golang
       - build_cli:
